# mastacraf

./: CHEATSHEET.md  Cargo.toml  DOCUMENTATION.md  README.md  index.html
icons/: icons.html
mastered/: freebase_master_report.json
mastered/freebase/: freebase_master_report.json
presets/: default.toml  film.toml  noise.toml
src/: cli.rs  config.rs  ffmpeg.rs  main.rs  report.rs
src/pipeline/: analyze.rs  mod.rs  process.rs  visualize.rs
