[package]
name = "mastacraf"
version = "0.1.0"
edition = "2021"
description = "Custom audio mastering pipeline for experimental electronic music"
license = "MIT"

[[bin]]
name = "mastacraf"
path = "src/main.rs"

[dependencies]
clap        = { version = "4.5",  features = ["derive"] }
anyhow      = "1.0"
serde       = { version = "1.0",  features = ["derive"] }
serde_json  = "1.0"
toml        = "0.8"
indicatif   = "0.17"
colored     = "2.0"
chrono      = { version = "0.4",  features = ["serde"] }
which       = "6.0"
dirs        = "5.0"
